--- a/templates/index.html
+++ b/templates/index.html
@@ -105,6 +105,7 @@
             <a href="/debug/candidates">View Candidates</a>
             <a href="/debug/jobposts">View Job Posts</a>
             <a href="/debug/skill_analysis">Analyze Skills</a>
+            <a href="/debug/jobs">Job Matching</a> <!-- New link -->
         </div>
     </div>
 </body>
